[project]
name = "neo2"
version = "0.1.2"
description = "Setup tools for NEO-2 runs"
authors = [
    { name = "Georg Grassler"}, {email = "georg.grassler@tugraz.at" },
]
license = {text = "MIT License"}
readme = "README.md"
keywords = ["NEO-2"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.20.0",
    "omfit_classes>=3.2023.47.2",
    "libneo>=0.0.1",
    "h5py>=3.10.0"
]

[project.urls]
homepage = "https://example.com"
repository = "https://github.com/itpplasma/NEO-2/"
documentation = "https://example.com/docs"

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
